hphp/test/zend/good/Zend/tests/bug41813.php.expectf

Fatal error: Operator not supported for strings in %s/bug41813.php on line 4
